--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ coverage==4.5.2
 coveralls==1.5.1
 docopt==0.6.2
 Flask==1.0.2
-Flask-JWT-Extended==3.16.0
 gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
@@ -24,6 +23,7 @@ pycodestyle==2.4.0
 PyJWT==1.7.1
 pytest==4.1.1
 pytest-cov==2.6.1
+python-dotenv==0.10.1
 requests==2.21.0
 six==1.12.0
 urllib3==1.24.1
